# inclusive-fl

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CI_CD.md  CI_CD_QUICKSTART.md  CI_CD_SUMMARY.md  CONTRIBUTING.md  DEPLOY_COMMANDS.md  Dockerfile  FedProx_fmnist_cnn_client_0.csv  README.md  YAMALAMDINGDONG.yml  compute_metrics.py  environment_droplet.yml  out.profile  pyproject.toml  pyproject.toml.ci-config  pytest.ini  requirements.txt  run_fedavg.sh  run_fedprox.sh  run_qFedAvg.sh  scale_out_exp.py  todo.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  docker.yml  docs.yml  release.yml  tests.yml
checkpoints/: FedProx_cnn_cifar_global_model_0.pt  FedProx_cnn_cifar_global_model_1.pt
configs/: fedavg_noniid.yaml  fedavg_synth_iid.yaml  fedavg_synth_majmin.yaml  fedavg_synth_noniid.yaml  fedsyn_noniid.yaml  qfedavg_noniid.yaml
configs/cifar10/resnet9/: fedavg.yaml  fedsyn_fair_custom-exp.yaml  fedsyn_fair_linear_interpolate.yaml  fedsyn_fair_sparsification.yaml  fedsyn_unfair_sparsification.yaml  qfedavg.yaml
configs/fashionmnist/: qfedavg.yaml
configs/svhn/: qfedavg.yaml
data/synthetic/: generate_synthetic.py
data/synthetic-hybrid/: generate_synthetic_hybrid.py  sample.py
data/synthetic-hybrid/data/: mytest.json
data/vehicle-grouped/: create_dataset.py
data/vehicle/data/: Y.npy
legacy_code/notebooks/: fainess_sparsity_completed.ipynb
legacy_code/scripts/: configs.yml  configs_alice.yml  configs_gokcen.yml  configs_harsha.yml  configs_irem.yml  configs_irem_2.yml  configs_maddox.yml  configs_yigit.yml  generate_synthetic.py  plot_data.py  scale_out_exp.py
legacy_code/src/: federated_main.py  global_updates.py  models.py  options.py  update.py  utils.py
scripts/: YAMALAMDINGDONG.yml  configs.yml  configs_alice.yml  configs_gokcen.yml  configs_harsha.yml  configs_irem.yml  configs_irem_2.yml  configs_maddox.yml  configs_qffedavg.yml  configs_yigit.yml  delete_wandb.py  generate_synthetic.py  generate_synthetic.sh  generate_synthetic_majority_minority.py  generate_synthetic_majority_minority.sh  plot_data.py  run_fedavg.sh  scale_out_exp.py
scripts/plot_synth/: plot_synth_data.py
src/: averaging_methods.py  baseline_main.py  compute_metrics.py  config.yaml  dataloader_utils.py  dataset_defs.py  dataset_utils.py  fedavg_noniid.yaml  federated_main.py  fl_dataset.py  general_utils.py  global_updates.py  harness.py  harness_params.py  logging_utils.py  models.py  optimizers.py  options.py  sampling.py  strategies.py  test_bed.ipynb  test_dataloaders.py  update.py  utils.py
src/aggregation/: __init__.py  avg_weight_with_test_loss.py  base.py  mean_weight.py  mean_weight_nobn.py  mean_weight_sparsified.py  qfedavg.py
src/configs/: example_config.yaml
src/configs/cifar10/: fedsyn_maj_min.yaml
src/fair_flearn/: main.py
src/fair_flearn/data/vehicle/: create_dataset.py
src/fair_flearn/flearn/models/fmnist/: lr.py
src/fair_flearn/flearn/models/synthetic/: mclr.py
src/fair_flearn/flearn/models/vehicle/: svm.py
src/fair_flearn/flearn/trainers/: afl.py  fedbase.py  maml.py  qffedavg.py  qffedsgd.py
src/fair_flearn/flearn/utils/: tf_utils.py
src/fair_flearn/utils/: tf_utils.py
sweeps/experiment_sweeps/: cifar10-resnet9.yaml
sweeps/hparam_sweeps/: cifar10-resnet9-fedavg.yaml  cifar10-resnet9-fedsyn_fair.yaml  cifar10-resnet9-fedsyn_unfair.yaml  cifar10-resnet9-qfedavg.yaml
tests/: README.md  __init__.py  conftest.py  test_configs.py  test_environment.py  test_imports.py  test_models.py  test_structure.py  test_utils.py
