[project]
name = "inclusive-fl"
version = "0.1.0"
description = "Federated learning research harness for Inclusive FL"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "Inclusive FL" }]
dependencies = [
    "appdirs==1.4.4",
    "certifi==2022.12.7",
    "charset-normalizer==3.1.0",
    "click==8.1.3",
    "contourpy==1.0.7",
    "cycler==0.11.0",
    "fastargs==1.2.0",
    "filelock==3.10.0",
    "fonttools==4.39.2",
    "gdown==5.1.0",
    "gitdb==4.0.10",
    "gitpython==3.1.31",
    "idna==3.4",
    "jinja2==3.1.2",
    "kiwisolver==1.4.4",
    "loguru==0.7.0",
    "markupsafe==2.1.2",
    "matplotlib==3.7.1",
    "mpmath==1.3.0",
    "networkx==3.0",
    "numpy==1.24.2",
    "packaging==23.0",
    "pandas==2.1.1",
    "parse==1.19.1",
    "pathtools==0.1.2",
    "Pillow==10.2.0",
    "prettytable==3.9.0",
    "protobuf==3.20.3",
    "psutil==5.9.4",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "pyyaml==6.0",
    "requests==2.28.2",
    "scikit-learn==1.3.0",
    "sentry-sdk==1.18.0",
    "setproctitle==1.3.2",
    "six==1.16.0",
    "smmap==5.0.0",
    "sympy==1.11.1",
    "tensorboardx==2.6",
    "terminaltables==3.1.10",
    "torch>=2.2.2",
    "torchvision==0.17.2",
    "tqdm==4.66.3",
    "typing-extensions>=4.5.0",
    "urllib3==1.26.15",
    "wandb>=0.15",
    "wget==3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 127
exclude = ["legacy_code"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # "I" enables isort-compatible import rules

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2


[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | legacy_code
)/
'''

[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = true
known_first_party = ["src"]
force_sort_within_sections = true
no_lines_before = ["LOCALFOLDER"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --disable-warnings"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/legacy_code/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
